--- a/index.html
+++ b/index.html
@@ -2432,7 +2432,7 @@
         border-bottom: 1px solid #EEE;
         width: 100%;
         margin-bottom: 24px;
-        padding-top: 0;
+        padding-top: 15px;
         padding-bottom: 16px
     }
 
