--- a/index.html
+++ b/index.html
@@ -980,7 +980,26 @@
             margin: 0 5px
         }
     }
+    @media (max-width: 648px){
+        .navbar {
+            padding: 0 20px 0 15px;
+            height: 100px;
+            position: fixed;
+            width: 100%;
+            top: 0;
+            left: 0;
+            z-index: 10
+        }
+        .logo img{
+            max-width: 100px;
+        }
+        .burger{
+            font-size: 28px;
 
+            margin-right: 50px;
+
+        }
+    }
     @media (max-width: 1023px) {
         header.page-header, header.main-page-header {
             padding-top: 46px
