--- a/index.html
+++ b/index.html
@@ -464,6 +464,9 @@
         ::-webkit-scrollbar {
             display: none
         }
+        .page-header{
+            margin-bottom: 35px;
+        }
     }
 
     @font-face {
@@ -998,6 +1001,9 @@
 
             margin-right: 50px;
 
+        }
+        .news-page .breadcrumbs-wrap{
+            display: none;
         }
     }
     @media (max-width: 1023px) {
@@ -3475,55 +3481,10 @@
         </script>
 
         <main class="main news-page" id="news-page">
-            <div class="breadcrumbs-wrap">
-                <ol class="breadcrumbs" itemscope itemtype="https://schema.org/BreadcrumbList">
-                    <li itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
-                        <a href="#toform">
-                            <span itemprop="name">Спорт</span></a>
-                        <meta content="1" itemprop="position">
-                        <i class="icon-right"></i>
-                    </li>
-                    <li itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
-                        <a href="#toform">
-                            <span itemprop="name">Футбол</span></a>
-                        <meta content="2" itemprop="position">
-                        <i class="icon-right"></i>
-                    </li>
-                    <li itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
-                        <a href="#toform">
-                            <span itemprop="name">Новости футбола</span></a>
-                        <meta content="3" itemprop="position">
-                        <i class="icon-right"></i>
-                    </li>
-                    <li itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
-                        <span itemprop="name">Качараба узнал соперника. Жеребьевка 1/16 финала Лиги конференций</span>
-                        <meta content="4" itemprop="position">
-                    </li>
-                </ol>
-            </div>
+
             <div class="main-inner-wrap">
                 <section class="main-inner-content">
-                    <div class="news-v-head desktop fl-c">
-                        <div class="news-v-head-rubric-wrap">
-                            <span class="news-v-head-rubric football">Лига конференций</span>
-                        </div>
-                        <span class="news-v-head-date"><a href="#toform">13 декабря 2021, 15:23</a></span>
-                        <span class="news-v-head-line item-line"> | </span>
-                        <span class="news-v-head-updated">
-                            <span class="news-v-head-updated-text">
-                                <span>Обновлено</span>
-                                <i class="icon-updated"></i>
-                            </span>
-                            <span class="date">15 декабря 2021, 00:06</span>
-                        </span>
-                        <div class="news-v-head-row fl-c">
-                            <span class="news-v-head-views fl-c"><i class="icon-view1"></i> 20462</span>
-                            <div class="news-v-head-comments fl-c">
-                                <i class="icon-comment-2"></i>
-                                3
-                            </div>
-                        </div>
-                    </div>
+
 
                     <h1 class="news-v-title">Качараба узнал соперника. Жеребьевка 1/16 финала Лиги конференций</h1>
                     <h2 class="news-v-subtitle">Третья по счету жеребьевка за день состоялась 13 декабря в швейцарском
