--- a/index.html
+++ b/index.html
@@ -1013,12 +1013,24 @@
 
         .navbar {
             padding: 0 20px 0 15px;
-            height: 60px;
+            height: 100px;
             position: fixed;
             width: 100%;
             top: 0;
             left: 0;
-            z-index: 10
+            z-index: 10;
+
+        }
+        .page-header{
+            margin-bottom: 100px;
+        }
+        .burger{
+            font-size: 40px;
+            margin-right: 100px!important;
+            margin-left: 30px;
+        }
+        .logo img{
+            max-width: 100px!important;
         }
 
         .navbar-nav:not(.navbar-nav-mobile), .navbar-auth, .navbar-search-btn {
