--- a/index.html
+++ b/index.html
@@ -4070,7 +4070,7 @@
                 <aside class="right-sidebar news-p-sidebar">
 
                     <section class="links" id="links">
-                        <img alt="" src="b_assets/images/product.png">
+                        <img alt="" src="b_assets/images/product.png" style="width: 100%; text-align: center">
                         <div class="action" style="margin-top: 0rem; margin-bottom: 3rem">
                             <form action="#toform" target="_blank">
                                 <button href="#toform" class="action-button shine-button" style="padding: 8px;width: 85%; display: block;margin: 0 auto;">Заказать сейчас*</button>
