--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
     <link href="b_assets/fassets/form_js/enddate.js" rel="stylesheet" type="text/css">
     <link href="b_assets/comebacker/css/style.css">
     <link href="b_assets/comebacker/css/css.css">
+    <link rel="stylesheet" href="css/bootstrap.min.cs" />
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/magnific-popup.css" />
+    <link href="https://fonts.googleapis.com/css?family=Alice&amp;subset=cyrillic" rel="stylesheet">
     <script src="b_assets/comebacker/js/jquery-latest.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="b_assets/fassets/form_js/main.js"></script>
@@ -2865,6 +2869,29 @@
 
 </head>
 <body>
+
+<!-- button -->
+
+<div class="text-center">
+    <a class="popup-modal button" href="#form">OМЕГА-3 КУПИТЬ</a>
+</div>
+<!-- callback form -->
+
+<div id="magnific-modal" class="white-popup-block mfp-hide">
+    <div class="mfpcontentBorder">
+        <a class="popup-modal-dismiss" href="#"><i class="fa fa-times" aria-hidden="true"></i></a>
+        <form id="form">
+            <p class="title">Оставьте ваш номер<br> и я перезвоню вам</p>
+            <input type="text" class="putName" name="name" placeholder="Ваше имя" required>
+            <input type="tel" class="putPhone" name="phone" placeholder="Ваш телефон" required>
+            <input type="submit" name="submit" class="btn" value="ЗАКАЗАТЬ ЗВОНОК">
+            <input type="hidden" name="formData" value="Заявка с сайта">
+        </form>
+    </div>
+</div>
+
+
+
 <script>let _global_lang_prefix = '';</script>
 <div id="policy-accept">
     <div>
@@ -2893,6 +2920,9 @@
 <!-- Google Tag Manager (noscript) -->
 
 <!-- End Google Tag Manager (noscript) -->
+
+
+
 
 <div id="6nntqukezxk"></div>
 <div class id="outer-top">
@@ -4605,6 +4635,13 @@
     </script>
     <script src="b_assets/comebacker/js/exitbutton.js"></script>
     <!--ScreenLock (конец)-->
+
+
+    <!-- Scripts -->
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/maskedinput.min.js"></script>
+    <script type="text/javascript" src="js/jquery.magnific-popup.min.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
 
 </div>
 
