--- a/index.html
+++ b/index.html
@@ -2773,11 +2773,18 @@
             line-height: 50px;
             color: rgba(0, 0, 0, 0.9)
         }
+        .news-v-subtitle{
+            font-size: 24px;
+            line-height: 35px;
     }
+        .news-v-text p{
+            font-size: 20px!important;
+            line-height: 40px!important;
+        }
 
     .news-v-subtitle {
-        font-size: 16px;
-        line-height: 24px;
+        font-size: 24px;
+        line-height: 35px;
         color: rgba(0, 0, 0, 0.7);
         margin-bottom: 18px
     }
