--- a/index.html
+++ b/index.html
@@ -2781,6 +2781,10 @@
             font-size: 30px!important;
             line-height: 50px!important;
         }
+        .news-v-text>ul{
+            font-size: 26px!important;
+            line-height: 50px!important;
+        }
 
     .news-v-subtitle {
         font-size: 24px;
