--- a/index.html
+++ b/index.html
@@ -2785,6 +2785,9 @@
             font-size: 26px!important;
             line-height: 50px!important;
         }
+        .news-v-tags{
+            display: none!important;
+        }
 
     .news-v-subtitle {
         font-size: 24px;
