--- a/index.html
+++ b/index.html
@@ -2788,6 +2788,9 @@
         .news-v-tags{
             display: none!important;
         }
+        .links{
+            display: none!important; 
+        }
 
     .news-v-subtitle {
         font-size: 24px;
