--- a/index.html
+++ b/index.html
@@ -2789,7 +2789,10 @@
             display: none!important;
         }
         .links{
-            display: none!important; 
+            display: none!important;
+        }
+        .button{
+            font-size: 25px!important;
         }
 
     .news-v-subtitle {
