--- a/index.html
+++ b/index.html
@@ -2794,6 +2794,9 @@
         .button{
             font-size: 45px!important;
         }
+        .card{
+            max-width: 750px!important;
+        }
 
     .news-v-subtitle {
         font-size: 24px;
