--- a/index.html
+++ b/index.html
@@ -2797,6 +2797,9 @@
         .card{
             max-width: 900px!important;
         }
+        .card-heading{
+            font-size: 4rem!important;
+        }
 
     .news-v-subtitle {
         font-size: 24px;
