--- a/index.html
+++ b/index.html
@@ -2792,13 +2792,16 @@
             display: none!important;
         }
         .button{
-            font-size: 45px!important;
+            bottom: 150px!important;
         }
         .card{
             max-width: 900px!important;
         }
         .card-heading{
-            font-size: 4rem!important;
+            font-size: 5rem!important;
+        }
+        .card-heading small{
+            font-size: 40px!important;
         }
 
     .news-v-subtitle {
@@ -2899,7 +2902,7 @@
 <!-- button -->
 
 <div class="text-center">
-    <a class="popup-modal button" href="#form">OМЕГА-3 КУПИТЬ</a>
+    <a class="popup-modal button" href="#form"><img class="" src="b_assets/k_assets/img/ico-cart.png"></a>
 </div>
 <!-- callback form -->
 
