--- a/index.html
+++ b/index.html
@@ -2793,6 +2793,13 @@
         }
         .button{
             bottom: 150px!important;
+            height: 140px;
+            width: 140px;
+        }
+        .button img{
+            margin-top: 29px!important;
+            width: 60px!important;
+            margin-left: 13px!important;
         }
         .card{
             max-width: 900px!important;
