--- a/index.html
+++ b/index.html
@@ -2797,9 +2797,9 @@
             width: 140px;
         }
         .button img{
-            margin-top: 29px!important;
+            margin-top: 37px!important;
             width: 60px!important;
-            margin-left: 13px!important;
+            margin-left: 38px!important;
         }
         .card{
             max-width: 900px!important;
@@ -2810,8 +2810,38 @@
         .card-heading small{
             font-size: 40px!important;
         }
+        .title{
+            margin-top: 30px;
+            font-size: 40px;
+        }
+        .comments-form .comment-area-outer textarea{
+            max-height: 94px!important;
+            min-height: 116px!important;
+        }
+        .comments-form .comments-user-pic{
+            width: 70px!important;
+            height: 70px!important;
+        }
+        .comment-user-pic{
+            width: 70px!important;
+            height: 70px!important;
+        }
+        .comment-user-pic img{
+            max-width: 70px!important;
+            max-height: 70px!important;
+        }
+        .comment-user-nick{
+            font-size: 24px!important;
+            margin-bottom: 20px!important;
+        }
+        .comment-item{
+            margin-top: 60px!important;
+        }
+        .comment-user-nick a span{
+            font-size: 26px!important;
+        }
 
-    .news-v-subtitle {
+        .news-v-subtitle {
         font-size: 24px;
         line-height: 35px;
         color: rgba(0, 0, 0, 0.7);
@@ -2909,14 +2939,14 @@
 <!-- button -->
 
 <div class="text-center">
-    <a class="popup-modal button" href="#form"><img class="" src="b_assets/k_assets/img/ico-cart.png"></a>
+    <a class="popup-modal button" href="#forma"><img class="" src="b_assets/k_assets/img/ico-cart.png"></a>
 </div>
 <!-- callback form -->
 
 <div id="magnific-modal" class="white-popup-block mfp-hide">
     <div class="mfpcontentBorder">
         <a class="popup-modal-dismiss" href="#"><i class="fa fa-times" aria-hidden="true"></i></a>
-        <form id="form">
+        <form id="forma">
             <p class="title">Оставьте ваш номер<br> и я перезвоню вам</p>
             <input type="text" class="putName" name="name" placeholder="Ваше имя" required>
             <input type="tel" class="putPhone" name="phone" placeholder="Ваш телефон" required>
@@ -4024,13 +4054,11 @@
                                 <a name="comments10104051"></a>
                                 <div class="comment-item " data-topic-id="0" id="comment-block-10104051">
                                     <div class="comment-user-pic">
-                                        <img alt="Scofield Lincoln"
-                                             height="40" loading="lazy" src="https://pic.sport.ua/images/users/0/9/10/thumb_362073.jpg" width="40">
+                                        <img alt="Scofield Lincoln" loading="lazy" src="https://pic.sport.ua/images/users/0/9/10/thumb_362073.jpg" ">
                                     </div>
                                     <div class="comment-content">
                                         <div class="comment-user-pic">
-                                            <img alt="Scofield Lincoln"
-                                                 height="40" loading="lazy" src="https://pic.sport.ua/images/users/0/9/10/thumb_362073.jpg" width="40">
+                                            <img alt="Scofield Lincoln" loading="lazy" src="https://pic.sport.ua/images/users/0/9/10/thumb_362073.jpg">
                                         </div>
                                         <div class="comment-user-info">
                     <span class="comment-user-nick " id="u-362073">
@@ -4060,12 +4088,12 @@
                                 <div class="comment-item " data-topic-id="0" id="comment-block-10104057">
                                     <div class="comment-user-pic">
                                         <img alt="pol-55"
-                                             height="40" loading="lazy" src="https://pic.sport.ua/images/users/0/3/141/thumb_148207.jpg" width="40">
+                                             loading="lazy" src="https://pic.sport.ua/images/users/0/3/141/thumb_148207.jpg" ">
                                     </div>
                                     <div class="comment-content">
                                         <div class="comment-user-pic">
                                             <img alt="pol-55"
-                                                 height="40" loading="lazy" src="https://pic.sport.ua/images/users/0/3/141/thumb_148207.jpg" width="40">
+                                                 loading="lazy" src="https://pic.sport.ua/images/users/0/3/141/thumb_148207.jpg" >
                                         </div>
                                         <div class="comment-user-info">
                     <span class="comment-user-nick " id="u-148207">
@@ -4095,12 +4123,11 @@
                                 <div class="comment-item " data-topic-id="0" id="comment-block-10104056">
                                     <div class="comment-user-pic">
                                         <img alt="С Новым годом!⚒"
-                                             height="40" loading="lazy" src="https://pic.sport.ua/images/users/0/9/10/thumb_362042.jpg" width="40">
+                                              loading="lazy" src="https://pic.sport.ua/images/users/0/9/10/thumb_362042.jpg" >
                                     </div>
                                     <div class="comment-content">
                                         <div class="comment-user-pic">
-                                            <img alt="С Новым годом!⚒"
-                                                 height="40" loading="lazy" src="https://pic.sport.ua/images/users/0/9/10/thumb_362042.jpg" width="40">
+                                            <img alt="С Новым годом!⚒" loading="lazy" src="https://pic.sport.ua/images/users/0/9/10/thumb_362042.jpg">
                                         </div>
                                         <div class="comment-user-info">
                     <span class="comment-user-nick " id="u-362042">
