--- a/index.html
+++ b/index.html
@@ -2813,6 +2813,7 @@
         .title{
             margin-top: 30px;
             font-size: 40px;
+            margin-bottom: 30px;
         }
         .comments-form .comment-area-outer textarea{
             max-height: 94px!important;
@@ -2839,6 +2840,20 @@
         }
         .comment-user-nick a span{
             font-size: 26px!important;
+        }
+        .second-my-content p{
+            font-size: 30px!important;
+            line-height: 40px!important;
+            margin-top: 30px!important;
+        }
+        .second-my .result span.items{
+            font-size: 50px!important;
+        }
+        .second-my{
+            width: 300px!important;
+        }
+        .input-label{
+            font-size: 40px!important;
         }
 
         .news-v-subtitle {
