--- a/index.html
+++ b/index.html
@@ -2855,6 +2855,14 @@
         .input-label{
             font-size: 40px!important;
         }
+        .action-button{
+            font-size: 2.5rem!important;
+        }
+        .card-info{
+            padding: 3rem 1rem!important;
+            text-align: center;
+            font-size: 1.875rem!important;
+        }
 
         .news-v-subtitle {
         font-size: 24px;
@@ -3959,23 +3967,7 @@
                             <div class="line"></div>
                             <div class="card-info">
                                 Не упустите возможность получить данный препарат&nbsp;по&nbsp;акции!
-                                <p style="font-size: 14px; color: #8597a3;">
-                                    Осталось
-                                    <span style="font-size: 18px;
-                                        background: linear-gradient(to bottom, #ffdb45 0%, #ffdb45 100%);
-                                        display: inline-block;
-                                        width: 30px;
-                                        height: 30px;
-                                        line-height: 30px;
-                                        text-align: center;
-                                        vertical-align: middle;
-                                        font-family: 'Russo One', sans-serif;
-                                        font-weight: 700;
-                                        border-radius: 5px;
-                                        color: #000000;
-                                        margin: 0 8px;">39</span>
-                                    упаковок по акции!
-                                </p>
+                                
                             </div>
                         </div>
                     </div>
