--- a/index.html
+++ b/index.html
@@ -2863,6 +2863,27 @@
             text-align: center;
             font-size: 1.875rem!important;
         }
+        .comment-text{
+            font-size: 24px!important;
+            line-height: 50px!important;
+        }
+        .mfp-content{
+            max-width: 500px!important;
+        }
+        p.title{
+            font-size: 45px!important;
+            margin:30px 10px 45px!important;
+        }
+        .putNumber, .putName, .putPhone{
+            width: 90%!important;
+        }
+        input.btn{
+            width: 350px!important;
+            height: 50px!important;
+            background: #ff0000;
+            margin: 35px 0px 30px !important;
+            border-radius: 8px!important;
+        }
 
         .news-v-subtitle {
         font-size: 24px;
@@ -3967,7 +3988,7 @@
                             <div class="line"></div>
                             <div class="card-info">
                                 Не упустите возможность получить данный препарат&nbsp;по&nbsp;акции!
-                                
+
                             </div>
                         </div>
                     </div>
