--- a/index.html
+++ b/index.html
@@ -2883,6 +2883,7 @@
             background: #ff0000;
             margin: 35px 0px 30px !important;
             border-radius: 8px!important;
+            font-size: 28px!important;
         }
 
         .news-v-subtitle {
